Change Log
==========


Release 0.5.5.10
	- Feature request ID: 3575716
	  checkSession.php with Anti-Cache Parameter
	  
	- Bug fix ID: 3575725
	  field order list_users.tpl wrong when using ldap
	  
	- Bug fix ID: 3575798
	  $schema is not set is fixed
	  searching by name and givenname or vice versa is now possible
	  
	- md5 is now default encryption in installer
	  
Release 0.5.5.9
	- Bug fix ID: 3575421
	  search field issue
	  
	- added some default values for files and directories 
	  in the installer
	  
	- Fixed ID: 3563502
	  added selinux module (experimantal)
	  
Release 0.5.5.8
	- Bug fix in the installer
	
Release 0.5.5.7
	- Feature request ID: 3574438
	  configurable default 'password expires'
	  
	- added some more information to 'Show user' report
	
	- added search fields in user list, group list, project list and 
	  repository list
	  
Release 0.5.5.6
    - Feature request ID: 3572503
      sorting of users/groups/project/repos  
      
    - Bug fix for ID: 3572496
      incorrect error message in workOnAccessRight.php (step 2)
      
    - Bug fix and enhancement for ID: 3571582
      sorting changes for include/createAuthFiles.php
      
	- Bug fix for ID: 3571941
	  When creating new access rights and neither group nor user is selected, 
	  there is no error message
	  
	- Bug fix for ID: 3571929
	  changing group permission to 'write' doesn't work
	  
	- Bug fix for ID: 3571851
	  Missing check, whether a repository already exists
	  
	- Bug fix for ID: 3572479
	  no configurable user sort in workOnGroupAccessRight.php
	  
	- Feature request ID: 3571829
	  added datepicker in access right administration
	  
	Thanks to everyone sending patches!
	
Release 0.5.5.5
	- Added three custom fields (ID: 3555321)
	
	Thanks to dafraggy for submitting the patch!
	
Release 0.5.5.4
	- Added text about password change time (ID: 3566309)
	- configurable default user access right (ID: 3569311)